# my_lexin

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/audio/: Audio.c  Audio.h  Audio_Decode.c  Audio_Decode.h  Audio_Encode.c  Audio_Encode.h  Audio_SR.c  Audio_SR.h
main/bsp/: Bsp_Display.c  Bsp_Display.h  Bsp_ES8311.c  Bsp_ES8311.h  Bsp_LCD.c  Bsp_LCD.h  Bsp_NVS.c  Bsp_NVS.h  Bsp_Pwm.c  Bsp_Pwm.h  Bsp_WS2812.c  Bsp_WS2812.h  Bsp_Wifi_Ble.c  Bsp_Wifi_Ble.h
main/com/: Com_Debug.c  Com_Debug.h  Com_State.c  Com_State.h
main/protocol/: Protocol_Http.c  Protocol_Http.h  Protocol_Websocket.c  Protocol_Websocket.h  Protocol_mqtt.c  Protocol_mqtt.h
